maintainIT2/src/objects/Bill_of_Material__c.object
<CustomObject>
    <description>The Bill of Material is used to create a list of Item Master records which may then be related to one, or more Asset Tags records.  From the Work Order, a BOM may be accessed and Part records selected.</description>
    <fields>
        <fullName>Asset_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Group</description>
        <inlineHelpText>Asset Group</inlineHelpText>
        <label>Asset Group</label>
        <referenceTo>Maintenance_Group__c</referenceTo>
        <relationshipLabel>Bills of Material</relationshipLabel>
        <relationshipName>Bills_of_Material</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>BOM Description</description>
        <inlineHelpText>BOM Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Bill of Material Status</description>
        <inlineHelpText>Bill of Material Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Bill of Material Version Number</description>
        <inlineHelpText>Bill of Material Version Number</inlineHelpText>
        <label>Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bill of Material</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BM-{000000}</displayFormat>
        <label>BOM ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bills of Material</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>